# checkalot

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  about.hbs  about.toml  bundle.yaml  checkalot.yaml  deny.toml  nfpm.yaml
src/: bundle.rs  cargo-checkalot.rs  checkalot.rs  checks.rs  config.rs  errors.rs  lib.rs  mains.rs
